* Fix non-entity ampersand * Update shields and parry weapons list style ** Base grid column width definition on em ** Allow overflowing ** No checkbox stretching ** Bold heads ** More pleasant heads alignment

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.css
@@ -1572,13 +1572,26 @@ The solution: convert the <input>s to type="text" and make them look like normal
     color: #000000;
 }
 
-/* Wird zum Anzeigen der "Schilde" Sektion im Kampf-Ausrüstungs Tab verwendet */
+/* Shields and parry weapons */
+.sheet-shields-overflow-container {
+    overflow-x: auto;
+}
+
 .sheet-shields_container {
     display: grid;
-    grid-template-columns: 20px 200px 100px 50px 50px 50px;
-    /* This is better for small screens, once min() is better supported */
-    /* grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr)); */
-    grid-gap: 1rem;
+    grid-template-columns: 3em 12em 10em 5em 5em 5em;
+    grid-gap: 0.2em;
+}
+
+.sheet-container_head > .sheet-shield_active,
+.sheet-container_head > .sheet-shield_item {
+    font-weight: bold;
+    text-align: left;
+}
+
+/* If head is broader than column contents, centre it */
+.sheet-oversize_head {
+    text-align: center;
 }
 
 .sheet-shield_active {
@@ -1586,6 +1599,7 @@ The solution: convert the <input>s to type="text" and make them look like normal
     grid-column-end: auto;
     grid-row-start: 1;
     grid-row-end: 1;
+    justify-self: center;
 }
 
 .sheet-shield_item {
@@ -1593,6 +1607,8 @@ The solution: convert the <input>s to type="text" and make them look like normal
     grid-column-end: auto;
     grid-row-start: 1;
     grid-row-end: 1;
+    align-self: center;
+    justify-self: center;
     width: 100%;
 }
 
